    "standby/sleeping" they are assumed to be inactive. (LP: #738764).

  [ Mathieu Bérard ]
  * actions/kms_powermode: Add action method to enable power management for
    radeon kms driver. Should be removed when applied upstream or pm-utils.

  [ Andres Rodriguez ]
  * sbin/powernapd: Take recover action when entered to powersave with
    powernap-now (LP: #768598)

 -- Andres Rodriguez <andreserl@ubuntu.com>  Thu, 21 Apr 2011 17:05:37 -0400

powernap (2.6-0ubuntu1) natty; urgency=low

  [ Andres Rodriguez ]
  * debian/copyright: Update upstream authors and license years.
  * powernap/monitors/IOMonitor.py: If processes do not have a command line,
    search regex in the 'Name:' field of /proc/<PID>/status (LP: #735452)
  * actions/cpu_frequency: Fix saving/restoring of wrong governor (LP: #743682)
    Thanks to Mathieu Berard for the patch.
    - Additionally, save 'ondemand' as default when acpi-support and ondemand
      are run on boot to handle special case when running on battery.
  * debian/powernap.{preinst,postinst}: Add logic to handle the upgrade of
    the config file as format has changed. (LP: #744588)
    - install copy of config file in /usr/share/powernap to help with this.

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 01 Apr 2011 17:21:48 -0500

powernap (2.5-0ubuntu1) natty; urgency=low

  [ Andres Rodriguez ]
  * Add support to load confs from /etc/powernap/config.d. Added to leverage
    compatibility with other applications, such as Eucalytpus. (LP: #711587)

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 14 Mar 2011 17:37:16 -0500

powernap (2.4-0ubuntu1) natty; urgency=low

  [ Andres Rodriguez ]
  * Fix wall message timestamp (LP: #718242)
  * Add powerwake-now support. Sends signal to powernapd to wakeup
    powersave mode if the daemon is in powersave.
  * debian/powernap.upstart: Add pre-stop.
    - Issues 'powerwake-now' to wake up system if stopping while in powersave.